--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <link rel="manifest" href="favicon/site.webmanifest">
 <!-- FAVICON - End -->
 <!-- Main CSS -->
- <link rel="stylesheet" href="css/css.css">
+ <link rel="stylesheet" href="css.css">
  </head>
  <!-- The video -->
  
