--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ Outside Activity: 1.3 hrs
 
 </div>
 
-<section style="height:77vw;">
+<section style="max-height: 1100px;">
 
 <div class="brsmallest"></div>
 <h2 class="services" ><b>From the data gathered, it’s shown that students take an average of one and a half hours in transit. While this is not substantial when compared with the rest of their day spent, it still takes a decent portion.
