--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@ During the weekend, time spent in transport drops but not as far as I expected. 
 </section>
 <section>
   
+  <div class="uppy">
 <h2 class="services" ><b> <p> Notes: Click the words to filter their respective mode of transport. </p>
 
 <div class="brsmallest"></div>
@@ -289,6 +290,8 @@ Note that walking, the train and the bus all share similar locations, suggesting
    <h2 class="services" ><b> 
 <div class="brsmaller"></div>
 The hundreds of surveyed university students provided great insights on how people get around. How uni students get around is impacted by their responsibilities and where they are in relation to their destination.  If their daily circumstances were different, their methods of transport would surely change as well.  </b>
+  
+</div>
 </section>
 </body>
  <!-- jQuery first, then Popper, then Bootstrap JS. -->
