--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ street or a woman on the train. </b>
 During the weekend, time spent in transport drops but not as far as I expected. It shows uni attendance is a key reason people take transport, but is not the only reason. During days university does not happen, activities that lead you outside your house also go up, keeping transit necessary. </b>
 </h2>
 <div class="brsmaller"></div>
-   <h3 style="height:100%;><b>Student Transit Use</b> </h3> 
+   <h3><b>Student Transit Use</b> </h3> 
 
 <div class="image-container2">
     <div class="image-inner-container">
